Arreglo de html y css para la pagina de status y ros info
Se colocaron las baterias en la parte inferior, y se cuadro con el disenio de la pagina en general

--- a/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.css
+++ b/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.css
@@ -1,272 +1,118 @@
-label{
-		font-family: Helvetica;
+body {
+	margin: 0;
+	/*height: 80vh;*/
+	background: #161616 !important;   
+	padding:0.25em;
 }
-.button_disabled_motors{
-		background:#cc6868;
-		border:0;
-		color:#fff;
-		font-size:20px;
-		width:100%;
-		display:block;
-		cursor:pointer;
-		font-family: Helvetica;
-		border-radius: 20px;
-		/*margin-top: 5px;
-		padding:3px;*/
+.card {
+	padding: 29px;
+	border-radius: 20px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
+
+	/* background-image: url(https://electricayelectronica.uniandes.edu.co/sites/default/files/estudiantes/Robot-Robocol.jpeg); */
 }
-.button_disabled_motors:active{
-		background-color: #944949;
+#stateTests {
+	height: 65vh;
+	/*background-image: url(../
+		./././assets/Rover_icon_status.png);*/	
+	background-repeat: no-repeat;
+	background-position-x: center;
+}
+#batteries {
+	height: 30vh;
 }
 
-.button_enabled_motors{
-		background:#449850;
-		border:0;
-		color:#fff;
-		font-size:20px;
-		width:100%;
-		display:block;
-		cursor:pointer;
-		font-family: Helvetica;
-		border-radius: 20px;
-		/*margin-top: 5px;
-		padding:3px;*/
-}	
-.button_enabled_motors:active{
-		background-color: #335a39;
+.button_enabled_motors {
+	background: #449850;
+	border: 0;
+	/*color:#fff;*/
+	width: 100%;
+	display: block;
+	cursor: pointer;
+	border-radius: 0.25em;
+	/*margin-top: 5px;
+    padding:3px;*/
 }
-.contenedorPeque{
+.button_enabled_motors:active {
+	background-color: #1d4e25;
+}
+.contenedorPeque {
 	z-index: 4;
 	height: 85px;
 	width: 150px;
 	position: absolute;
-	padding:0 9px ;
-	border-radius: 20px;
+	padding: 0 9px;
+	border-radius: 0.25em;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.41);
-	background: #91b0d017;
 	margin: auto;
-	}
-	.contenedorPeque label {
-		margin: 0 auto;
-		text-align: center;
-		display: block;
-	}
-
-input:focus,input:active,button:focus,button:active{
-		outline:none;
 }
-.form-style-10 input {
+.contenedorPeque label {
+	margin: 0 auto;
+	text-align: center;
 	display: block;
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	width: 49%;
-	padding: 6px;
-	font-size: 16px;
-	font-family: Helvetica;
-	border-radius: 6px;
-	-webkit-border-radius:6px;
-	-moz-border-radius:6px;
-	border: 2px solid #fff;
-	box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.33);
-	-moz-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.33);
-	-webkit-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.33);
 }
-.form-style-10 label{
-	display: block;
-	font: 16px Arial, Helvetica, sans-serif;
-	color: #fff;
-	margin-bottom: 15px;
-	width: 220px;
+#state_tests {
+	top: 15%;
+	/* left: 5%; */
 }
-	
-	
-
-.slider {
-	-webkit-appearance: none;
-	width: 220px;
-	background: #bbbbbb;
-	outline: none;
-	opacity: 0.7;
+#state_tests1 {
+	top: 45%;
+	/* left: 25px; */
 }
-.slider::-webkit-slider-thumb {
-	-webkit-appearance: none;
-	appearance: none;
-	width: 20px;
-	height: 20px;
-	background: #000;
-	cursor: pointer;
+#state_tests2 {
+	top: 70%;
+	/* left: 25px; */
 }
-
-.slider::-moz-range-thumb {
-	width: 20px;
-	height: 20px;
-	background: #1a6cb5;
-	cursor: pointer;
+#state_tests3 {
+	top: 15%;
+	right: 25px;
 }
-:root {
-	--background-color: rgb(50, 50, 50);
-	--acid-height: 0;
-	--display-charging: "none";
+#state_tests4 {
+	top: 45%;
+	right: 25px;
 }
-
-.cell {
-	/*width: 285px;*/
-	height: 114px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	/*flex-direction: column;*/
-	position: absolute;
-	margin:auto;
-	left: 0;
-	right: 0;
+#state_tests5 {
+	float: right;
+	top: 70%;
+	right: 25px;
 }
-
-.percentage {
-	font-size: 157%;
-	font-weight: bold;
-	color: black;
-	/*margin-top: 15px;*/
-	font-family: Helvetica
+#state_tests6 {
+	top: 80%;
+	right: 278px;
+	height: 42px;
 }
-.percentage i {
-	margin-right: 6px;
-	display: var(--display-charging);
+.carga {
+	width: auto;
+	height: 10%;
+	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.41);
+	/* background-color: aquamarine; */
 }
-.corriente {
-	font-size: 157%;
-	font-weight: bold;
-	color: black;
-	/*margin-top: 15px;*/
-	font-family: Helvetica
+.row .contenedorBateria {
+	border-width: thick;
+	padding: 0;
+	height: 95%;
+	background: rgb(33, 37, 41);
+	background: linear-gradient(
+		0deg,
+		rgba(33, 37, 41, 1) 0%,
+		rgba(228, 181, 3, 1) 100%
+	);
 }
-.corriente i {
-	margin-right: 6px;
-	display: var(--display-charging);
+.puntaBateria {
+	margin: auto;
+	justify-content: space-evenly;
+	width: 35px;
+	background: #e4b503;
+	height: 5%;
+	padding: 0;
 }
-.info {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	display: flex;
-	align-items: center;
-	margin: 5px;
-	font-size: 80%;
-	color: rgba(255, 255, 255, 0.5);
-	transition: .2s ease-in-out;
+.row {
+	height: 100%;
 }
-.info:hover {
-	color: white;
+.bateria {
+	height: 100%;
+	width: 50%;
 }
-.info i {
-	margin-right: 5px;
+.card{
+	border-radius: 8px
 }
-.info a {
-	color: inherit;
-}
-
-.battery {
-	/*position: absolute;*/
-	width: 250px;
-	height: 70px;
-	border: 4px solid #FFF;
-	border-radius: 25px;
-}
-/*.battery:after {
-	position: absolute;
-	top: 20px;
-	right: -14px;
-	width: 10px;
-	height: 30px;
-	background-color: #FFF;
-	border-radius: 0px 5px 5px 0px;
-	content: '';
-}*/
-.end_battery{
-	position: absolute;
-	top: 20px;
-	/*right: -14px;*/
-	width: 10px;
-	height: 30px;
-	background-color: #FFF;
-	border-radius: 0px 5px 5px 0px;
-	display: inline-block;
-}
-
-.acid-container {
-	overflow: hidden;
-	height: calc(100% - 8px);
-	border-radius: 18px;
-	margin: 4px;
-}
-.acid-container .acid {
-	height: 250px;
-	display: flex;
-	flex-direction: column;
-	/*flex-flow: column-reverse;*/
-}
-.acid-container .acid .fill {
-	background: white;
-	height: var(--acid-height);
-	width: 100%;
-	flex-shrink: 0;
-	transition: height 2s ease-in-out, background-color .5s ease-out;
-}
-.acid-container .acid .waves {
-	display: block;
-	width: 100%;
-	height: 10px;
-	margin-bottom: -1px;
-
-}
-.acid-container .acid .waves .parallax > use {
-	-webkit-animation: move-forever 12s linear infinite;
-	animation: move-forever 12s linear infinite;
-
-}
-.acid-container .acid .waves .parallax > use:nth-child(1) {
-	-webkit-animation-delay: -2s;
-	animation-delay: -2s;
-	fill: rgba(255, 255, 255, 0.6);
-	
-}
-.acid-container .acid .waves .parallax > use:nth-child(2) {
-	-webkit-animation-delay: -2s;
-	animation-delay: -2s;
-	-webkit-animation-duration: 5s;
-	animation-duration: 5s;
-	fill: rgba(255, 255, 255, 0.8);
-
-}
-.acid-container .acid .waves .parallax > use:nth-child(3) {
-	-webkit-animation-delay: -4s;
-	animation-delay: -4s;
-	-webkit-animation-duration: 3s;
-	animation-duration: 3s;
-	fill: white;
-
-}	*/
-@-webkit-keyframes move-forever {
-	0% {
-		-webkit-transform: translate(-90px, 0%);
-		transform: translate(-90px, 0%);
-	}
-	100% {
-		-webkit-transform: translate(85px, 0%);
-		transform: translate(85px, 0%);
-	}
-}
-@keyframes move-forever {
-	0% {
-		-webkit-transform: translate(-90px, 0%);
-		transform: translate(-90px, 0%);
-	}
-	100% {
-		-webkit-transform: translate(85px, 0%);
-		transform: translate(85px, 0%);
-	}
-}
-
-/*	font-family: 'RoboFont';
-	src: url('{% static 'fonts/Bank Gothic Medium.ttf' %}');
-}*/
