--- a/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.html
+++ b/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.html
@@ -1,37 +1,50 @@
 <head>
 	<title>Untitled Document</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+	<link rel="stylesheet"  />
+	<link
+		rel="stylesheet"
+	/>
 </head>
-
 <body>
-	<div class="col-xs-12 col-lg-6" style="text-align: center; display: inline-block; vertical-align: top;">
-		<div class= "contenedor1" id="state_tests" >
-			<p class="label1" id="label1">Rostopic List</p><br>
-				<div 
-					id="barraBrazo col-8" class="barraBrazo" > Aqui salen los topicos<br>
-				</div>				
+	<div class="row">
+		<div class="col" style="height: 107vh">
+			<div
+				class="columnasContenido col-card card-header border-warning bg-transparent"
+			>
+				<!-- <h1>Rostopic List</h1> -->
+				<div
+					class="card-header text-warning text-center border-warning bg-transparent"
+					style="color: #e4b503 !important"
+				>
+					<p class="label1" id="label1">Rostopic List</p>
+					<br />
+				</div>
+				<div id="lista" class="barraBrazo">topics will be here<br /></div>
+			</div>
+		</div>
+		<div class="col" style="height: 65vh">
+			<div
+				class="columnasContenido col-card border-warning bg-transparent"
+				style="padding: 10px"
+			>
+				<p class="labelTopEcho" id="echo1">Tópico echo</p>
+				<input class="TopicoEcho" type="text" name="type" /><br /><br />
+
+				<p class="labelData" id="data" style="text-align: center">Data</p>
+				<br />
+				<input class="inputData" type="text" name="type" /><br /><br />
+
+				<p class="labelTopEcho" id="typeTopic">Type :</p>
+				<input class="TopicoEcho" type="text" name="type" /><br /><br />
+
+				<p class="labelTopEcho" id="publishers">Publishers:</p>
+				<input class="TopicoEcho" type="text" name="type" /><br /><br />
+
+				<p class="labelTopEcho" id="subscribers">Subscribers:</p>
+				<input class="TopicoEcho" type="text" name="type" /><br /><br />
+			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-lg-6" style="text-align: center; display: inline-block; vertical-align: top;">
-		<div id="batteries" class="contenedor1 ">	
-			<br style="clear:both;"/>
-
-			<p class="labelTopEcho" id="echo1">Tópico echo</p>
-			<input class="TopicoEcho"type="text" name="type"><br><br>
-
-			<p class="labelData" id="data" style="text-align: center;">Data</p><br>
-			<input class="inputData"type="text" name="type"><br><br>
-
-			<p class="labelTopEcho" id="typeTopic">Type   :</p>
-			<input class="TopicoEcho"type="text" name="type"><br><br>
-
-			<p class="labelTopEcho" id="publishers">Publishers:</p>
-			<input class="TopicoEcho"type="text" name="type"><br><br>
-
-			<p class="labelTopEcho" id="subscribers">Subscribers:</p>
-			<input class="TopicoEcho"type="text" name="type"><br><br>
-		</div>
-	</div>	
-
 </body>
+
