webpack loader for Django and Angular communication

--- a/Robocol/testapp/src/app/auth/auth-login/auth-login.component.html
+++ b/Robocol/testapp/src/app/auth/auth-login/auth-login.component.html
@@ -5,7 +5,7 @@
   </span>
   <div class="card-group mb-3">
     <div class="card border-warning" id="rover_card">
-      <img src="././assets/Home/Rover.png" class="card-img-top" id="imgRover" alt="Rover">
+      <img src="/assets/Home/Rover.png" class="card-img-top" id="imgRover" alt="Rover">
       <div class="card-body text-center">
         <h5 class="card-title text-light">ROVER</h5>
         <p class="card-text">
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="card border-warning" id ="submarine_card">
-      <img src="././assets/Home/Submarino.png" class="card-img-top" id="imgSubmarino" alt="Submarino">
+      <img src="/assets/Home/Submarino.png" class="card-img-top" id="imgSubmarino" alt="Submarino">
       <div class="card-body text-center">
         <h5 class="card-title text-light">SUBMARINE</h5>
         <p class="card-text">
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="card border-warning" id="lunabot_card">
-      <img src="././assets/LUNABOT.png" class="card-img-top" id="imgLunabot" alt="Lunabot">
+      <img src="/assets/LUNABOT.png" class="card-img-top" id="imgLunabot" alt="Lunabot">
       <div class="card-body text-center">
         <h5 class="card-title text-light">LUNABOT</h5>
         <p class="card-text">
