Images from assets fix

--- a/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
@@ -1,7 +1,7 @@
 <body scroll="no">
 	<div class="card border-warning bg-transparent text-center" id="stateTests">
 		<img
-				src="../../../assets/Rover_icon_status.png"
+				src="/static/assets/Rover_icon_status.png"
 				style="
 					position: absolute;
 					left: 0;
