--- a/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
@@ -30,7 +30,7 @@
 							<!-- </h5> -->
 						<!-- </div> -->
 						<!-- <div class="row">
-								<img src="../../../assets/pirita.jpg" alt="Rocks" width="150px">
+								<img src="/static/assets/pirita.jpg" alt="Rocks" width="150px">
 						</div> -->
 					</div>
 				</div>
