--- a/Robocol/testapp/src/app/rover/sensorica/eva/eva0.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/eva/eva0.component.html
@@ -24,7 +24,7 @@
 				<tbody>
 					<!-- <tr>
 						<th scope="row">1</th>
-						<td><img src="../../../assets/pirita.jpg" alt="Rocks" width="80px"></td>
+						<td><img src="/static/assets/pirita.jpg" alt="Rocks" width="80px"></td>
 						<td><input type=submit value="3 - Full"></td>
 						<td><input type=submit value="5 - Full"></td>
 					</tr> -->
@@ -32,10 +32,10 @@
 						<th rowspan="4">TRASH</th>
 					</tr>
 					<tr>
-						<th id="EVA_1_1"><img src="../../../assets/pirita.jpg" alt="Rocks" width="80px"></th>
+						<th id="EVA_1_1"><img src="/static/assets/pirita.jpg" alt="Rocks" width="80px"></th>
 						<!-- <th id="EVA_1_1">
 							<div class="container">
-								<img src="../../../assets/pirita.jpg" alt="Rocks">
+								<img src="/static/assets/pirita.jpg" alt="Rocks">
 								<button class="btn">Button</button>
 							</div>
 						</th> -->
