--- a/Robocol/testapp/src/app/rover/sensorica/measurements/measurements.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/measurements/measurements.component.html
@@ -75,7 +75,7 @@
 			</div> -->
 			Graph
 			<br>
-			<img class="card-img-top" src="../../../assets/Sensors/graph.gif" alt="Rocks">
+			<img class="card-img-top" src="/static/assets/Sensors/graph.gif" alt="Rocks">
 		</div>
 	</div>
 </div>
@@ -85,10 +85,10 @@
 		Measurements
 	</div> -->
 	<!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
-	<!-- <img class="card-img-top" src="../../../assets/pirita.jpg" alt="Rocks"> -->
+	<!-- <img class="card-img-top" src="/static/assets/pirita.jpg" alt="Rocks"> -->
 	<!-- <div class="card-body"> -->
 		<!-- <div class="img-square-wrapper">
-			<img class="" src="../../../assets/pirita.jpg" alt="Rocks" width="250px">
+			<img class="" src="/static/assets/pirita.jpg" alt="Rocks" width="250px">
 		</div>
 
 		<div class="card-body">
@@ -183,7 +183,7 @@
 											<!-- <h5 class="card-title">Graphs</h5>
 									</div>
 									<div class="row"> -->
-											<!-- <img src="../../../assets/pirita.jpg" alt="Rocks" width="250px"> -->
+											<!-- <img src="/static/assets/pirita.jpg" alt="Rocks" width="250px"> -->
 									<!-- </div> -->
 									<!-- </div> -->
 								<!-- </div> -->
