--- a/Robocol/testapp/src/app/rover/sensorica/station/station.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/station/station.component.html
@@ -43,7 +43,7 @@
 					</table>
 				</div>
 				<div class="col">
-					<img class="card-img-top" src="../../../assets/Sensors/anemometer.gif" alt="Anemometer img" width="10px"/>
+					<img class="card-img-top" src="/static/assets/Sensors/anemometer.gif" alt="Anemometer img" width="10px"/>
 				</div>
 			</div>
 		<!-- </div> -->
