--- a/Robocol/testapp/src/app/rover/traccion/joystick/joystick.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/joystick/joystick.component.html
@@ -14,7 +14,7 @@
 <div class="card">
   <div class="card-body">
     <div  id="joystick_circle" >
-      <img src="../../../../assets/Negro.png" class="rounded-circle responsive">
+      <img src="./static/assets/Negro.png" class="rounded-circle responsive">
     </div>
 
   </div>
