--- a/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.css
+++ b/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	/*height: 80vh;*/
-	background: #161616 !important;   
+	background: #161616 !important;
 	padding:0.25em;
 }
 .card {
@@ -14,7 +14,7 @@ body {
 #stateTests {
 	height: 65vh;
 	/*background-image: url(../
-		./././assets/Rover_icon_status.png);*/	
+		/static/assets/Rover_icon_status.png);*/
 	background-repeat: no-repeat;
 	background-position-x: center;
 }
