--- a/Robocol/testapp/src/app/rover/sensorica/live/live.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/live/live.component.html
@@ -9,7 +9,7 @@
 		<!-- <div class="card-transparent text-center"> -->
       <!-- <div class="row">
         <div class="<col span="1">
-          <img class="card-img-top" src="../../../assets/countdown.gif" alt="Card image cap"/>
+          <img class="card-img-top" src="/static/assets/countdown.gif" alt="Card image cap"/>
         </div>
         <div class="<col span="3">">
           <a href="#" class="btn btn-warning">Photo!</a>
@@ -36,11 +36,11 @@
 
 
           <!-- <div class="col py-5 px-lg-8 border"> -->
-            <!-- <img src="../../../assets/countdown.gif" class="img-fluid" alt="Responsive image"> -->
-            <!-- <img class="card-img-top border" src="../../../assets/countdown.gif" alt="Video 1" height="500px"/> -->
-						<!-- <img class="card-img-top" src="../../../assets/Sensors/Cam_2_Sensors.jpg" alt="Video 1"/> -->
+            <!-- <img src="/static/assets/countdown.gif" class="img-fluid" alt="Responsive image"> -->
+            <!-- <img class="card-img-top border" src="/static/assets/countdown.gif" alt="Video 1" height="500px"/> -->
+						<!-- <img class="card-img-top" src="/static/assets/Sensors/Cam_2_Sensors.jpg" alt="Video 1"/> -->
 						<!-- width="10px" -->
-            <!-- <img class="card-img-top" style="width: 45vw; padding: 0px 0px;" src="../../../assets/countdown.gif" alt="Card image cap"/> -->
+            <!-- <img class="card-img-top" style="width: 45vw; padding: 0px 0px;" src="/static/assets/countdown.gif" alt="Card image cap"/> -->
           </div>
 
           <!-- <div class="col py-1 px-lg-1 border">
@@ -69,9 +69,9 @@
 					</div> -->
 				</div>
 				<!-- <div class="col py-3 px-lg-3"> -->
-			    <!-- <img class="card-img-top" src="../../../assets/countdown.gif" alt="Video 2" width="10px"/> -->
-					<!-- <img class="card-img-top" src="../../../assets/Sensors/Cam_1_Sensors.jpg" alt="Video 2"/> -->
-          <!-- <img class="card-img-top" style="padding: 0px 0px;" src="../../../assets/countdown.gif" alt="Card image cap"/> -->
+			    <!-- <img class="card-img-top" src="/static/assets/countdown.gif" alt="Video 2" width="10px"/> -->
+					<!-- <img class="card-img-top" src="/static/assets/Sensors/Cam_1_Sensors.jpg" alt="Video 2"/> -->
+          <!-- <img class="card-img-top" style="padding: 0px 0px;" src="/static/assets/countdown.gif" alt="Card image cap"/> -->
         </div>
         <!-- <div class="col"> -->
 
