--- a/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.html
+++ b/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.html
@@ -1,50 +1,48 @@
-<head>
-	<title>Untitled Document</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<link rel="stylesheet"  />
-	<link
-		rel="stylesheet"
-	/>
-</head>
-<body>
-	<div class="row">
-		<div class="col" style="height: 107vh">
-			<div
-				class="columnasContenido col-card card-header border-warning bg-transparent"
-			>
-				<!-- <h1>Rostopic List</h1> -->
-				<div
-					class="card-header text-warning text-center border-warning bg-transparent"
-					style="color: #e4b503 !important"
-				>
-					<p class="label1" id="label1">Rostopic List</p>
+
+<html>
+	<body>
+		<div class="row">
+			<div class="col-sm">
+				<div class="card border-warning bg-transparent text-center">
+					<h1>Rostopic List</h1>
 					<br />
+					<div id="Layer1">
+						Aquí saldrá un scroll<br />
+						<br />
+						ejemplos <br />
+						de<br />
+						lista de<br />
+						topicos <br />
+					</div>
 				</div>
-				<div id="lista" class="barraBrazo">topics will be here<br /></div>
+			</div>
+			<div class="col-sm">
+				<div class="card border-warning bg-transparent text-center">
+					<div id="topicoTitulo" class="row">
+						<div class="col-4 texto">Topico Echo:</div>
+						<div class="col-8 texto mensajeMostrar card">Ejemplo de topico</div>
+					</div>
+
+					<p style="text-align: left; width: 20%">Data:</p>
+					<div id="contenedorData">Ejemplo de data</div>
+					<br />
+
+					<div id="topicoTitulo" class="row">
+						<div class="col-4 texto">Type:</div>
+						<div class="col-8 texto mensajeMostrar card">Ejemplo de type</div>
+					</div>
+
+					<div id="topicoTitulo" class="row">
+						<div class="col-4 texto">Publishers:</div>
+						<div class="col-8 texto mensajeMostrar card">Ejemplo de publishers</div>
+					</div>
+					<div id="topicoTitulo" class="row">
+						<div class="col-4 texto">Subscribers:</div>
+						<div class="col-8 texto mensajeMostrar card">Ejemplo de subscribers</div>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="col" style="height: 65vh">
-			<div
-				class="columnasContenido col-card border-warning bg-transparent"
-				style="padding: 10px"
-			>
-				<p class="labelTopEcho" id="echo1">Tópico echo</p>
-				<input class="TopicoEcho" type="text" name="type" /><br /><br />
-
-				<p class="labelData" id="data" style="text-align: center">Data</p>
-				<br />
-				<input class="inputData" type="text" name="type" /><br /><br />
-
-				<p class="labelTopEcho" id="typeTopic">Type :</p>
-				<input class="TopicoEcho" type="text" name="type" /><br /><br />
-
-				<p class="labelTopEcho" id="publishers">Publishers:</p>
-				<input class="TopicoEcho" type="text" name="type" /><br /><br />
-
-				<p class="labelTopEcho" id="subscribers">Subscribers:</p>
-				<input class="TopicoEcho" type="text" name="type" /><br /><br />
-			</div>
-		</div>
-	</div>
-</body>
+	</body>
+</html>
 
