--- a/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.css
+++ b/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.css
@@ -1,103 +1,10 @@
-/* .contenedor1 { */
-/*z-index: 4;
-	height: 679px;*/
-/* width: 93%;
-	padding: 50px;
-	top: 0;
-	bottom: 0;
-	border-radius: 20px;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
-	background: #00000020;
-	margin: 0;
-	display: inline-block;
-	text-align: left;
-}
-.contenedor2 { */
-/*z-index: 3;
-	height: 679px;
-	width: 710px;*/
-/* padding: 50px;
-	top: 0;
-	bottom: 0;
-	/*left: 750px;*/ /*
-	border-radius: 20px;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
-	background: #00000020;
-	margin: 0;
-	display: inline-block;
-} */
-/* .label1 {
-	/*position: absolute;*/
-/*
-	bottom: 0;
-	margin: auto;
-	display: block;
-	text-align: center;
-	color: black;
-	font-size: 30px;
-} */
-
-/* .barraBrazo {
-	/*width:500px; */ /*
-	height: 500px;
-	overflow: auto;
-	font-size: large;
-} */
-/* .boxtopic {
-	z-index: 4;
-	height: 522px;
-	width: 510px;
-	/*position: absolute;*/
-/*padding: 29px;
-
-	border-radius: 20px;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
-	background: #00000020;
-	margin: 0;
-} */
-/* 
-.labelTopEcho {
-	bottom: 0;
-	margin: 0;
-	display: inline;
-	text-align: left;
-	color: black;
-	font-size: x-large;
-	padding-right: 75px;
-	width: 430px;
-} */
-/* .TopicoEcho {
-	bottom: 0;
-	margin: 0;
-	display: inline;
-	text-align: right;
-	color: black;
-	/*width: -webkit-fill-available;*/
-/*} */
-/* .labelData {
-	bottom: 0;
-	margin: 0;
-	display: inline;
-	text-align: right;
-	color: black;
-	font-size: x-large;
-	padding-right: 75px;
-	width: 630px;
-}
-.inputData {
-	width: -webkit-fill-available;
-	height: 310px;
-}
-*/body {
+body {
 	background-color: #161616;
-}/*
-.col-card {
-	border: #e4b503;
-	text-align: center;
-	display: inline-block;
-	vertical-align: top;
-} */
-/* dfkjkfj */
+	height: 85vh;
+}
+*{
+	color: white
+}
 .columnasContenido {
 	margin: 18px;
 	background-color: #161616;
@@ -113,3 +20,51 @@
 	width: -webkit-fill-available;
 	height: 310px;
 }
+td {
+	text-align: left;
+}
+.mensajeMostrar {
+	display: inline;
+	color: black;
+}
+td div {
+	width: 50%;
+}
+.col,
+.card,
+html {
+	height: 100%;
+}
+.row {
+	height: 100%;
+	width: 100%;
+}
+/* .card {
+	padding: 20px;
+} */
+.col {
+	padding: 30px;
+}
+.border-warning {
+	padding: 15px;
+}
+#Layer1 {
+	width: auto;
+	height: 100%;
+	overflow: scroll;
+	border: outset;
+	border: inherit;
+}
+#topicoTitulo {
+	height: 10%;
+	margin-top: 5px;
+}
+#contenedorData {
+	height: 50%;
+	width: 100%;
+	border: inherit;
+}
+.texto {
+	text-align: left;
+}
+
