--- a/Robocol/testapp/src/app/rover/traccion/traccion.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/traccion.component.html
@@ -1,5 +1,5 @@
 <h1>Tracción</h1>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col">
       <app-telemetry></app-telemetry>
