--- a/Robocol/testapp/src/app/rover/sensorica/measurements/measurements.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/measurements/measurements.component.html
@@ -54,9 +54,10 @@
 					</tr>
 				</table>
 				<!-- <br> -->
-				<button (mousedown)="change_value('Measurements','get')" (mouseup)="stop_changing_value()" type="button" class="btn btn-warning">
+				<button (click)="sendMessage()">Send</button>
+				<!-- <button (mousedown)="change_value('Measurements','get')" (mouseup)="stop_changing_value()" type="button" class="btn btn-warning">
 					Get!
-				</button>
+				</button> -->
 			</div>
 		</div>
 		<!-- -------------------------- GRAPH -------------------------- -->
