--- a/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
@@ -1,33 +1,30 @@
-<div class="col justify-content-center text-center" style="margin-top: 15px; height: 100%;">
-   <div class="row justify-content-center align-middle text-center" style="height: 32vh; margin-left: 0vh; margin-right: 0vh;">
-      <div class="col" style="padding-right: 0px; padding-left: 0px;">
-         <div class="card border-warning bg-transparent justify-content-center align-middle text-center" style="height: 100%;">
-            <div class="card-body bg-black justify-content-center align-middle text-center" style="height: 100%;">
-               <img src="https://pa1.narvii.com/6929/4c88d838f2f8d187a01c4118fc6be1f760f642d0r1-306-158_00.gif">
+<div class="d-flex p-2 bd-highlight exterior">
+   <div class="d-flex flex-column bd-highlight">
+      <div class="d-flex flex-row justify-content-around">
+         <div class="col col-lg-6">
+            <div class="d-flex card border-warning bg-transparent justify-content-center align-items-center text-center">
+               <div class="d-flex align-items-center card-body bg-black justify-content-center align-items-center text-center">
+                  <img class="img-responsive" src="https://techcrunch.com/wp-content/uploads/2018/03/mrd-sf.gif">
+               </div>
+            </div>
+         </div>
+         <div class="col col-lg-6">
+            <div class="d-flex card border-warning bg-transparent justify-content-center align-items-center text-center">
+               <div class="d-flex align-items-center card-body bg-black justify-content-center align-items-center text-center">
+                  <img class="img-responsive" src="https://techcrunch.com/wp-content/uploads/2018/03/mrd-sf.gif">
+               </div>
             </div>
          </div>
       </div>
-      <div class="col" style="padding-right: 0px; padding-left: 0px;">
-         <div class="card border-warning bg-transparent justify-content-center align-middle text-center" style="height: 100%;">
-            <div class="card-body bg-black justify-content-center align-middle text-center" style="height: 100%;">
-               <img src="https://pa1.narvii.com/6929/4c88d838f2f8d187a01c4118fc6be1f760f642d0r1-306-158_00.gif">
-            </div>
-         </div>
-      </div>
-   </div>
-   <div class="card border-warning bg-transparent" style="height: 51vh;">
-      <div class="card-body bg-black">
-         <div class="row align-middle">
-            <div class="col-3 justify-content-center align-middle text-center">
-               <app-brazo-cinematica-directa></app-brazo-cinematica-directa>
-            </div>
-            <div class="col-5 justify-content-center align-middle text-center">
+      <div class="d-flex card border-warning bg-transparent justify-content-center align-items-center text-center tarjetaControl">
+         <div class="d-flex align-items-center card-body bg-black justify-content-around cuerpoTarjetaControl">
+            <div class="d-flex justify-content-center align-items-center text-center rotacion">
                <app-brazo-cinematica-inversa-rotacion></app-brazo-cinematica-inversa-rotacion>
             </div>
-            <div class="col-2 justify-content-center align-middle text-center">
+            <div class="d-flex justify-content-center align-items-center text-center vertical">
                <app-brazo-cinematica-inversa-vertical></app-brazo-cinematica-inversa-vertical>
             </div>
-            <div class="col-2 justify-content-center align-middle text-center">
+            <div class="d-flex justify-content-center align-items-center text-center horizontal">
                <app-brazo-cinematica-inversa-horizontal></app-brazo-cinematica-inversa-horizontal>
             </div>
          </div>
