--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-horizontal/brazo-cinematica-inversa-horizontal.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-horizontal/brazo-cinematica-inversa-horizontal.component.html
@@ -1,4 +1,4 @@
-<table class="table table-borderless" style="height: 100%; background-color: transparent;">
+<table class="table table-borderless" style="background-color: transparent;">
    <tbody>
       <tr class="justify-content-center text-center align-middle">
          <td class="justify-content-center text-center align-middle" style="padding: 0px;">
