--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-vertical/brazo-cinematica-inversa-vertical.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-vertical/brazo-cinematica-inversa-vertical.component.html
@@ -1,7 +1,7 @@
-<table class="table table-borderless" style="height: 100%; background-color: transparent;">
+<table class="table table-borderless" style="background-color: transparent;">
    <tbody>
       <tr class="justify-content-center text-center align-middle">
-         <td class="justify-content-center text-center align-middle" style="padding: 4vh;">
+         <td class="justify-content-center text-center align-middle">
             <div class="img-wrapper">
                <img class="img-responsive" src="{{imageSrc}}">
                <div class="img-overlay">
