--- a/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.css
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.css
@@ -1,6 +1,35 @@
 .card-body{
-	padding-left: 2vh;
-	padding-right: 2vh;
+	padding-left: 0vh;
+	padding-right: 0vh;
 	padding-top: 0vh;
 	padding-bottom: 0vh;
+}
+
+.img-responsive {
+	max-width: 100%;
+	min-width: 100%;
+}
+
+.flex-column{
+	width: 100%;
+}
+
+.exterior{
+	padding: 0px;
+}
+
+.col{
+	padding: 0px;
+}
+
+.tarjetaControl{
+	max-width: 100%;
+	min-width: 100%;
+	max-height: 40vh;
+	min-height: 40vh;
+}
+
+.rotacion, .vertical, .horizontal{
+	min-height: 100%;
+	max-height: 100%;
 }
