dropdown para traccion, falta corregir errores por eso no se muestra todo

--- a/Robocol/testapp/src/app/rover/traccion/copilot/copilot.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/copilot/copilot.component.html
@@ -1,11 +1,10 @@
-<h1>Tracción</h1>
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      
+      <h1>Telemetry</h1>
     </div>
     <div class="col">
-      
+     <!-- <app-telemetry></app-telemetry> -->
     </div>
   </div>
 </div>
