--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -15,9 +15,17 @@
           <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
             <a routerLinkActive="active" routerLink="/brazo" class="nav-link">ARM<span class="sr-only">(current)</span>  </a>
           </li>
-          <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/traccion" class="nav-link">TRACTION<span class="sr-only">(current)</span>  </a>
+
+          <li class="nav-item" ngbDropdown *ngxPermissionsOnly="['ROVER']">
+            <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown1" role="button">
+              TRACTION
+            </a>
+            <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
+              <a ngbDropdownItem href="#" routerLink="/pilot">Pilot</a>
+              <a ngbDropdownItem href="#" routerLink="/copilot">Copilot</a>
+            </div>
           </li>
+
           <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
             <a routerLinkActive="active" routerLink="/estado" class="nav-link">STATUS<span class="sr-only">(current)</span>  </a>
           </li>
