--- a/Robocol/testapp/src/app/rover/traccion/pilot/pilot.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/pilot/pilot.component.html
@@ -1,11 +1,10 @@
-<h1>Tracción</h1>
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      
+      <h1>Joystick</h1>
     </div>
     <div class="col">
-      
+      <!-- <app-joystick></app-joystick> -->
     </div>
   </div>
 </div>
