Avances diseño traccion, hacer npm install antes de correr despues de hacer pull

--- a/Robocol/testapp/src/app/rover/traccion/copilot/telemetry/telemetry.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/copilot/telemetry/telemetry.component.html
@@ -1,7 +1,7 @@
-<h2> Telemetry </h2>
+<h2 style="color:rgb(255, 255, 255)"> Telemetry </h2>
 
 <!-- Tarjeta de Odometria -->
-<div class="card">
+<div class="cardRB card">
   <div class="card-body">
     <div class="row">
       <div class="col">
@@ -25,7 +25,7 @@
 </div>
 
 <!-- Tarjeta de IMU -->
-<div class="card">
+<div class="cardRB card">
   <div class="card-body">
     <div class="row">
       <div class="col">
@@ -48,7 +48,7 @@
 </div>
 
 <!-- Tarjeta de PMW -->
-<div class="card">
+<div class="cardRB card">
   <div class="card-body">
     <div class="row">
       <div class="col">
@@ -83,7 +83,7 @@
 </div>
 
 
-<div class="card">
+<div class="cardRB card">
   <div class="card-body">
     
     <div class="row">
