--- a/Robocol/testapp/src/app/rover/traccion/copilot/copilot.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/copilot/copilot.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <h1>Telemetry</h1>
+      <img class="card-img-top" src="../../../assets/Sensors/graph.gif" alt="Map">
     </div>
     <div class="col">
-     <!-- <app-telemetry></app-telemetry> -->
+      <app-telemetry></app-telemetry> 
     </div>
   </div>
 </div>
