--- a/Robocol/testapp/src/app/rover/traccion/pilot/pilot.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/pilot/pilot.component.html
@@ -1,10 +1,12 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <h1>Joystick</h1>
+      <app-live></app-live>
     </div>
+  </div>
+  <div classs="row">
     <div class="col">
-      <!-- <app-joystick></app-joystick> -->
+      <app-joystick></app-joystick> 
     </div>
   </div>
 </div>
