Arm and status update

--- a/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.css
+++ b/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	/*height: 80vh;*/
-	background: #161616 !important;
+	background: #161616 !important;   
 	padding:0.25em;
 }
 .card {
@@ -14,7 +14,7 @@ body {
 #stateTests {
 	height: 65vh;
 	/*background-image: url(../
-		/static/assets/Rover_icon_status.png);*/
+		/static/assets/Rover_icon_status.png);*/	
 	background-repeat: no-repeat;
 	background-position-x: center;
 }
@@ -112,7 +112,18 @@ body {
 .bateria {
 	height: 100%;
 	width: 50%;
+	margin-bottom: 0;
+	margin: auto;
 }
 .card{
-	border-radius: 8px
+	border-radius: 8px;
+	margin-bottom:15px;
+}
+.columnaCamara{
+	/*height: 100%;*/
+	margin-bottom:15px;
+
+}
+#descripcionBateria{
+	font-size: small; margin: 0;color: rgba(228, 181, 3, 1)
 }
