--- a/Robocol/testapp/src/app/rover/sensorica/sensorica.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/sensorica.component.html
@@ -2,7 +2,7 @@
   <div class="row mx-lg-n4 align-items-center">
     <!-- COLUMN 1 -->
     <div class="col py-1 px-xl-1 align-self-start">
-      <app-live></app-live>
+      <!-- <app-live></app-live> -->
     </div>
     <!-- COLUMN 2 -->
     <div class="col py-1 px-xl-1 align-self-start">
