--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -2,7 +2,7 @@
   <!-- <div class="container-fluid bg-dark text-white" id="page"> -->
     <nav class="navbar navbar-dark navbar-expand-sm navbar-fixed-top" id="top-bar">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#"><img style="height: 48px; padding: 2px 10px;" src="/static/assets/robocol-BLANCO.png"></a>
+        <a class="navbar-brand" href="home"><img style="height: 48px; padding: 2px 10px;" src="/static/assets/robocol-BLANCO.png"></a>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon">
