--- a/Robocol/testapp/src/app/auth/auth-login/auth-login.component.html
+++ b/Robocol/testapp/src/app/auth/auth-login/auth-login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" id="projects_container">
   <span>
     <!-- &nbsp;&nbsp; -->
-    &nbsp;&nbsp;
+    <!-- &nbsp;&nbsp; -->
   </span>
   <div class="card-group mb-3">
     <div class="card border-warning" id="rover_card">
