--- a/Robocol/testapp/src/app/rover/traccion/pilot/joystick/joystick.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/pilot/joystick/joystick.component.html
@@ -1,5 +1,5 @@
 <!-- Seleccion de topico -->
-<div class="card">
+<div class="cardRB card text-center">
   <div class="card-body">
     <h5> Select Topic to Publish to </h5>
     <select name="select">
@@ -11,10 +11,13 @@
 </div>
 
 <!-- Circulo -->
-<div class="card">
+<div class="cardRB card">
   <div class="card-body">
-    <div  id="joystick_circle" >
-      <img src="./static/assets/Negro.png" class="rounded-circle responsive">
+    <div class="mat-app-background basic-container">
+    <div class="example-boundary">
+      <div class="example-box" cdkDragBoundary=".example-boundary" cdkDrag>
+      </div>
+      </div>
     </div>
 
   </div>
