--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -16,9 +16,18 @@
           <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
             <a routerLinkActive="active" routerLink="/brazo" class="nav-link">ARM<span class="sr-only">(current)</span>  </a>
           </li>
-          <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/traccion" class="nav-link">TRACTION<span class="sr-only">(current)</span>  </a>
+          <li class="nav-item" ngbDropdown *ngxPermissionsOnly="['ROVER']">
+            <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown1" role="button">
+              TRACTION
+            </a>
+            <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
+              <a ngbDropdownItem href="#" routerLink="/pilot">Pilot</a>
+              <a ngbDropdownItem href="#" routerLink="/copilot">Copilot</a>
+            </div>
           </li>
+          <!-- <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
+            <a routerLinkActive="active" routerLink="/traccion" class="nav-link">TRACTION<span class="sr-only">(current)</span>  </a>
+          </li> -->
           <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
             <a routerLinkActive="active" routerLink="/estado" class="nav-link">STATUS<span class="sr-only">(current)</span>  </a>
           </li>
@@ -50,7 +59,7 @@
         <div class="collapse navbar-collapse flex-grow-1 text-right">
           <ul class="navbar-nav ml-auto">
             <span class="navbar-text">
-              <span class="badge badge-warning" *ngxPermissionsOnly="['ROVER']">ROVER</span>
+              <span class="badge badge-warning" *ngxPermissionsOnly="['ROVER']">ROVERA</span>
               <span class="badge badge-warning" *ngxPermissionsOnly="['SUBMARINO']">SUBMARINE</span>
               <span class="badge badge-warning" *ngxPermissionsOnly="['LUNABOT']">LUNABOT</span>
             </span>
