--- a/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.html
+++ b/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.html
@@ -19,25 +19,25 @@
 			<div class="col-sm">
 				<div class="card border-warning bg-transparent text-center">
 					<div id="topicoTitulo" class="row">
-						<div class="col-4 texto">Topico Echo:</div>
+						<div class="col-4 texto">Topico Echo</div>
 						<div class="col-8 texto mensajeMostrar card">Ejemplo de topico</div>
 					</div>
 
-					<p style="text-align: left; width: 20%">Data:</p>
+					<p style="text-align: left; width: 20%">Data</p>
 					<div id="contenedorData">Ejemplo de data</div>
 					<br />
 
 					<div id="topicoTitulo" class="row">
-						<div class="col-4 texto">Type:</div>
+						<div class="col-4 texto">Type</div>
 						<div class="col-8 texto mensajeMostrar card">Ejemplo de type</div>
 					</div>
 
 					<div id="topicoTitulo" class="row">
-						<div class="col-4 texto">Publishers:</div>
+						<div class="col-4 texto">Publishers</div>
 						<div class="col-8 texto mensajeMostrar card">Ejemplo de publishers</div>
 					</div>
 					<div id="topicoTitulo" class="row">
-						<div class="col-4 texto">Subscribers:</div>
+						<div class="col-4 texto">Subscribers</div>
 						<div class="col-8 texto mensajeMostrar card">Ejemplo de subscribers</div>
 					</div>
 				</div>
