--- a/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
@@ -33,54 +33,56 @@
 					<label id="L0_speed">Speed: 0 RPM</label>
 					<label id="L0_current">Current: 0 A</label>
 
-					<button id="B2" class="button_enabled_motors">Enabled</button>
+					<!--<button id="B2" class="button_enabled_motors" (click) ="change_botton(botones, Enabled)">Enabled</button>-->
 				</div>
 
 				<div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests1">
 					<label id="L1_speed"> Speed: 0 RPM</label>
 					<label id="L1_current">Current: 0 A</label>
 
-					<button id="B1" class="button_enabled_motors">Enabled</button>
+					<!--<button id="B1" class="button_enabled_motors" (click) ="change_botton(botones, Enabled)">Enabled</button>-->
 				</div>
 
 				<div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests2">
 					<label id="L2_speed">Speed: 0 RPM</label>
 					<label id="L2_current">Current: 0 A</label>
 
-					<button id="B0" class="button_enabled_motors">Enabled</button>
+					<!--<button id="B0" class="button_enabled_motors" (click) ="change_botton(botones, Enabled)">Enabled</button>-->
 				</div>
 				<div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests3">
 					<label id="R0_speed">Speed: 0 RPM</label>
 					<label id="R0_current">Current: 0 A</label>
 
-					<button id="B5" class="button_enabled_motors">Enabled</button>
+					<!--<button id="B5" class="button_enabled_motors" (click) ="change_botton(botones, Enabled)">Enabled</button-->
 				</div>
 				<div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests4">
 					<label id="R1_speed">Speed: 0 RPM</label>
 					<label id="R1_current">Current: 0 A</label>
 
-					<button id="B4" class="button_enabled_motors">Enabled</button>
+					<!-- <button id="B4" class="button_enabled_motors" (click) ="change_botton(botones, Enabled)">Enabled</button> -->
 				</div>
 
 				<div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests5">
 					<label id="R2_speed">Speed: 0 RPM</label>
 					<label id="R2_current">Current: 0 A</label>
 
-					<button id="B3" class="button_enabled_motors">Enabled</button>
+					<!-- <button id="B3" class="button_enabled_motors" (click) ="change_botton(botones, Enabled)">Enabled</button> -->
 				</div>
 				<!-- Hecho Franz -->
 				<div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests6">
-					<button id="B6" style="margin: 4.5px 0" class="button_enabled_motors">
+					<!-- <button id="B6" style="margin: 4.5px 0" class="button_enabled_motors" (click) ="change_botton(botones, Enabled)"> 
 						Enable All
-					</button>
+					</button>-->
 				</div>
-				<button (click)="sendMessage()">Send</button>
+				<!--<button (click)="sendMessage()">Send</button>-->
 				<!-- Termina Hecho Franz -->
 			</div>
 		</div>
 		<!-- <div id= "columnaCamara"class="col-6 card border-warning bg-transparent text-center"> -->
 		<div class="col-6">
 			<div class="card border-warning bg-transparent text-center">
+			<!-- <app-video></app-video> -->
+				<!-- <video #video class="vid" autoplay></video> -->
 			</div>
 		</div>
 	</div>
@@ -89,6 +91,7 @@
 			<div class="card border-warning bg-transparent text-center" id="batteries">
 				<div class="row">
 					<div class="col-sm">
+						<img src="../../../assets/Bateria/0-10.png">
 						<div class="bateria">
 							<div class="puntaBateria"></div>
 							<div class="contenedorBateria card border-warning bg-transparent" style="margin: 0">
@@ -106,84 +109,6 @@
 						<p class= "descripcionBateria" style=" font-size: small; margin: 0;color: rgba(228, 181, 3, 1)"> Nombre </p> 
 						<p class= "descripcionBateria" style="font-size:xx-small; margin: 0;color: rgba(228, 181, 3, 1)"># v  # A  #C</p>
 						</div>
-
-					</div>
-					<div class="col-sm">
-						<div class="bateria">
-							<div class="puntaBateria"></div>
-							<div class="contenedorBateria card border-warning bg-transparent">
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-							</div>
-						</div>
-							<p class= "descripcionBateria" style=" font-size: small; margin: 0;color: rgba(228, 181, 3, 1)"> Nombre </p> 
-						<p class= "descripcionBateria" style="font-size:xx-small; margin: 0;color: rgba(228, 181, 3, 1)"># v  # A  #C</p>
-					</div>
-					<div class="col-sm">
-						<div class="bateria">
-							<div class="puntaBateria"></div>
-							<div class="contenedorBateria card border-warning bg-transparent">
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-							</div>
-						</div>
-						<p class= "descripcionBateria" style=" font-size: small; margin: 0;color: rgba(228, 181, 3, 1)"> Nombre </p> 
-						<p class= "descripcionBateria" style="font-size:xx-small; margin: 0;color: rgba(228, 181, 3, 1)"># v  # A  #C</p>
-					</div>
-					<div class="col-sm">
-						<div class="bateria">
-							<div class="puntaBateria"></div>
-							<div class="contenedorBateria card border-warning bg-transparent">
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-							</div>
-						</div>
-							<p class= "descripcionBateria" style=" font-size: small; margin: 0;color: rgba(228, 181, 3, 1)"> Nombre </p> 
-						<p class= "descripcionBateria" style="font-size:xx-small; margin: 0;color: rgba(228, 181, 3, 1)"># v  # A  #C</p>
-					</div>
-					<div class="col-sm">
-						<div class="bateria" >
-							<div class="puntaBateria"></div>
-							<div class="contenedorBateria card border-warning bg-transparent" style="margin-bottom: 0;">
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-								<div class="carga"></div>
-							</div>
-							<p class= "descripcionBateria" style=" font-size: small; margin: 0;color: rgba(228, 181, 3, 1)"> Nombre </p> 
-							<p class= "descripcionBateria" style="font-size:xx-small; margin: 0;color: rgba(228, 181, 3, 1)"># v  # A  #C</p>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
