--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -59,8 +59,8 @@
         <div class="collapse navbar-collapse flex-grow-1 text-right">
           <ul class="navbar-nav ml-auto">
             <span class="navbar-text">
-              <span class="badge badge-warning" *ngxPermissionsOnly="['ROVER']">ROVER</span>
-              <span class="badge badge-warning" *ngxPermissionsOnly="['SUBMARINO']">SUBMARINES</span>
+              <span class="badge badge-warning" *ngxPermissionsOnly="['ROVER']">ROVERA</span>
+              <span class="badge badge-warning" *ngxPermissionsOnly="['SUBMARINO']">SUBMARINE</span>
               <span class="badge badge-warning" *ngxPermissionsOnly="['LUNABOT']">LUNABOT</span>
             </span>
           </ul>
